--- a/portfolio.html
+++ b/portfolio.html
@@ -48,6 +48,6 @@
 </h1>
 </h1>
 <h2>
-    <a href="IRHomepage.html">Homepage</a> <a href="contact.html"> Contact</a><a href="experience.html"> Experience</a>
+    <a href="index.html">Homepage</a> <a href="contact.html"> Contact</a><a href="experience.html"> Experience</a>
 </h2>
 </html>
