--- a/experience.html
+++ b/experience.html
@@ -48,6 +48,6 @@
     </style>
    
     <h2>
-        <a href="IRHomepage.html">Homepage</a> <a href="portfolio.html"> Portfolio</a><a href="contact.html"> Contact</a>
+        <a href="index.html">Homepage</a> <a href="portfolio.html"> Portfolio</a><a href="contact.html"> Contact</a>
     </h2>
 </html>
