--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,6 @@
         <hr width="75% size="2" color="black"> 
     </h1>
     <h2>
-        <a href="IRHomepage.html">Homepage</a> <a href="portfolio.html"> Portfolio</a><a href="experience.html"> Experience</a>
+        <a href="index.html">Homepage</a> <a href="portfolio.html"> Portfolio</a><a href="experience.html"> Experience</a>
     </h2>
 </html>
