--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
     margin: 0px 0 65px 180px;
     
   }
+  @media (max-width: 900px) {
+  h2 {
+width: 80%;
+padding: 15px;
+  }
+}
+@media (max-width: 600px) {
+  h2{
+    width: 95%;
+    padding: 15px;
+  }
+}
 </style>
 <h1> 
      
