--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
   
    <div class="container">
    <div class="decorative-box">
-      <p style="font-size: 30px;color: white;">Welcome to my Website! I am an Information Communication Technology Major at Florida State University. My Technical and Communication
-      interests include Advertising, Data Analytics, and UX Design.</p>
+      <p style="font-size: 30px;color: white;">Welcome to my Website! I am an Information Communication Technology Major at Florida State University. My Technical and Communication interests include Advertising, Data Analytics, and UX Design.</p>
      
    </div>
  
