--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   McKenzie Pettus 
 <hr width="75% size="2" color="black"> 
 </h1>
-<h2> <a href="portfolio.html">Portfolio</a> <a href="contact.html"> Contact</a><a href="experience.html"> Experience</a> </h2>
+<h2> <a href="portfolio.html">Portfolio</a> <a href="experience.html"> Experience</a> </h2>
   
  
   
