--- a/experience.html
+++ b/experience.html
@@ -149,7 +149,7 @@ body {
         McKenzie Pettus 
         <hr width="75% size="2" color="black"> 
       </h1>
-      <h2> <a href="portfolio.html">Portfolio</a> <a href="contact.html"> Contact</a><a href="index.html"> Homepage</a> </h2> 
+      <h2> <a href="portfolio.html">Portfolio</a> <a href="index.html"> Homepage</a> </h2> 
       <h3> <li>School </li></h3>
     
       <p style="font-size: 25px;color: lightblue;"><b> Florida State University: Bachelors of Science in Information Technology</b>
