--- a/portfolio.html
+++ b/portfolio.html
@@ -81,8 +81,8 @@
       text-align: center;
       margin-bottom: 30px;
      }
-     .project {
-      width: 30%; 
+     .projects {
+      width: 50%; 
             margin-bottom: 10px;
             display: flex;
             flex-direction: column;
