--- a/portfolio.html
+++ b/portfolio.html
@@ -145,7 +145,7 @@
             flex-wrap: wrap;
             justify-content: center; 
             align-items: center;     
-                 
+            width: 50%;  
             
         }
       .container-photo {
