--- a/experience.html
+++ b/experience.html
@@ -140,7 +140,7 @@
     McKenzie Pettus 
         <hr width="75% size="2" color="black"> 
       </h1>
-      <h2> <a href="index.html">Portfolio</a> <a href="IRHomepage.html"> Homepage</a> </h2> 
+      <h2> <a href="porfolio.html">Portfolio</a> <a href="index.html"> Homepage</a> </h2> 
       <div class="container">
       <div class="square">  
         <h3> Tasty Pastry </h3> 
